[project]
name = "colmap_plugin"
version = "0.1.1"
requires-python = ">=3.12"
description="COLMAP reconstruction plugin"

dependencies = [
    "pycolmap @ https://github.com/lyehe/build_gpu_colmap/releases/download/v4.0.2/pycolmap-4.0.2%2Bcu128.bundled.cudss-cp312-cp312-manylinux_2_35_x86_64.whl ; platform_system=='Linux'",
    "pycolmap @ https://github.com/lyehe/build_gpu_colmap/releases/download/v4.0.2/pycolmap-4.0.2%2Bcuda.cudss-cp312-cp312-win_amd64.whl ; platform_system=='Windows'",
]

[tool.lichtfeld]
hot_reload = true
plugin_api = ">=1,<2"
lichtfeld_version = ">=0.5.0"
required_features = []